improved UI & scan logic