@@ -22,6 +22,7 @@ public class IPScan {
     }
 
     public void scanSubnet(String subnet) {
+
         String[] parts = subnet.split("/");
 
         if (parts.length != 2) {
@@ -29,6 +30,7 @@ public class IPScan {
             return;
         }
 
+        String baseIP = parts[0];
         int prefix;
 
         try {
@@ -43,23 +45,38 @@ public class IPScan {
             return;
         }
 
-        String base = parts[0].substring(
-                0,
-                parts[0].lastIndexOf(".")
-        );
+        String[] ipParts = baseIP.split("\\.");
+
+        if (ipParts.length != 4) {
+            System.out.println("Invalid IP address.");
+            return;
+        }
+
+        String network = ipParts[0] + "."
+                + ipParts[1] + "."
+                + ipParts[2];
+
         System.out.println("\nScanning subnet " + subnet + "...\n");
 
+        int found = 0;
+
         for (int i = 1; i <= 254; i++) {
-            String ip = base + "." + i;
+
+            String ip = network + "." + i;
 
             if (isHostAlive(ip)) {
+
+                found++;
+
                 System.out.println("Host found: " + ip);
 
                 String hostname = getHostName(ip);
                 System.out.println("Hostname: " + hostname);
             }
         }
+
         System.out.println("\nSubnet scan completed.");
+        System.out.println("Hosts found: " + found);
     }
 
     public String getHostName(String ip) {
@@ -77,36 +94,61 @@ public class IPScan {
         }
     }
 
+
     public String detectOS(String ip) {
+
         try {
-            Process process = Runtime.getRuntime().exec("ping -n 1 " + ip);
+
+            String osName = System.getProperty("os.name").toLowerCase();
+
+            ProcessBuilder builder;
+
+            if (osName.contains("win")) {
+                builder = new ProcessBuilder("ping", "-n", "1", ip);
+            } else {
+                builder = new ProcessBuilder("ping", "-c", "1", ip);
+            }
+
+            Process process = builder.start();
+
             Scanner scanner = new Scanner(process.getInputStream());
 
             while (scanner.hasNextLine()) {
 
                 String line = scanner.nextLine();
 
-                if (line.contains("TTL=")) {
-                    int start = line.indexOf("TTL=") + 4;
-                    String ttlText = line.substring(start).split(" ")[0];
+                if (line.toUpperCase().contains("TTL=")) {
+
+                    int start = line.toUpperCase().indexOf("TTL=") + 4;
+
+                    String ttlText = line.substring(start)
+                            .split("[^0-9]")[0];
+
                     int ttl = Integer.parseInt(ttlText);
+
                     scanner.close();
 
                     if (ttl <= 64) {
-                        return "Linux/Unix";
-                    } else if (ttl <= 128) {
-                        return "Windows";
-                    } else {
-                        return "Network Device/Other";
+                        return "Linux/Unix (estimated)";
                     }
+
+                    if (ttl <= 128) {
+                        return "Windows (estimated)";
+                    }
+
+                    return "Network Device/Other (estimated)";
                 }
             }
+
             scanner.close();
+
         } catch (Exception e) {
             return "Unknown";
         }
+
         return "Unknown";
     }
+
 
     private boolean isHostAlive(String ip) {
         try {
@@ -116,5 +158,9 @@ public class IPScan {
         } catch (Exception e) {
             return false;
         }
+    }
+
+    public boolean isHostAliveForGui(String ip) {
+        return isHostAlive(ip);
     }
 }
